# advent-of-code

./: .gitignore  Cargo.toml  README.md  package.json
2020/: util.mjs  util.test.js
2020/day1/: one.mjs  test.js
2020/day2/: test2.js  two.mjs
2020/day3/: test3.js  three.mjs
2020/day4/: four.mjs  test4.js
2020/day5/: five.mjs  test5.js
2020/day6/: six.mjs  test6.js
2020/day7/: seven.mjs  test7.js
2020/from day 8/src/java/com/adventofcode/: BootCode.java  BootCodeDebugger.java  BootCodeInstruction.java  BootCodeOperation.java  Day8.java  Day9.kt
2020/from day 8/test/com/adventofcode/: BootCodeDebuggerTest.java  BootCodeTest.java  Day9Test.kt  TestDataFactory.java
2024/day00/: solution.ts  test.ts
2024/day01/: solution.ts  test.ts
2024/day02/: solution.ts  test.ts
2024/day03/: solution.ts  test.ts
2024/lib/: input.ts
src/: README.md  intcode.rs  main.rs
