[package]
name = "advent-of-code"
version = "0.1.0"
authors = ["tsanthosh <santosht@thoughtworks.com>"]
edition = "2018"
include = ["data/*.data"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
permutator = "0.3.3"
num = "0.2.0"
log = "0.4.8"
env_logger = "0.7.1"
num-traits = "0.2"
piston = "0.49.0"
itertools = "0.8.2"
libmath = "0.2.1"
[lib]
name = "intcode"
path = "src/intcode.rs"